--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,22 @@
-<Button text="form works!" class="btn btn-primary"></Button>
+<GridLayout rows="*, auto, auto">
+  <ListView [items]="imageAssets">
+    <ng-template let-image="item" let-i="index">
+      <GridLayout columns="auto, *">
+        <Image
+          [width]="thumbSize" [height]="thumbSize"
+          [src]="image" stretch="fill">
+        </Image>
+        <Label col="1" [text]="'image ' + i"></Label>
+      </GridLayout>
+    </ng-template>
+  </ListView>
+  <Image [src]="imageSrc" *ngIf="isSingleMode" [width]="previewSize"
+    [height]="previewSize" stretch="aspectFit">
+  </Image>
+  <Button row="1" text="Pick Single" (tap)="onSelectSingleTap()"
+    horizontalAlignment="center">
+  </Button>
+  <Button row="2" text="Pick Multiple" (tap)="onSelectMultipleTap()"
+    horizontalAlignment="center">
+  </Button>
+</GridLayout>
